--- a/latex/QC-Module.tex
+++ b/latex/QC-Module.tex
@@ -91,5 +91,18 @@ The results are shown in Fig.2.
     \includegraphics[width=0.8\textwidth]{pm-M^2.png}
     \caption{The blue points are directly calculated points.}
 \end{figure}
-This figure shows the Gell-Mann-Oakes-Renner relation.
+This figure shows the Gell-Mann-Oakes-Renner relation.\\
+I also calculate the pion decay constant $f_{\pi}$, the results are shown in the table below.
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|}
+    \hline
+    $f_{\pi}$ \\
+    \hline
+    0.093665 \\
+    \hline
+    \end{tabular}
+    \caption{The pion decay constant.}
+\end{table}
+
 \end{document}
