--- a/latex/QC-Module.tex
+++ b/latex/QC-Module.tex
@@ -89,7 +89,7 @@ The results are shown in Fig.2.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{pm-M^2.png}
-    \caption{The red line shows the equation $M^2=\frac{2r_P(0.0034)}{f_\pi(0.0034)}m_\mu$; the blue points are calculated by $M^2=\frac{2r_P(m_\mu)}{f_\pi(m_\mu)}m_\mu$.}
+    \caption{The red line shows the equation $M^2=\frac{2r_P(0.0034)}{f_\pi(0.0034)}m_\mu$; the brown line shows the equation $M^2=\frac{2r_P(m_\mu)}{f_\pi(m_\mu)}m_\mu$; the blue line shows the results directly calculated from solving BSE.}
 \end{figure}
 This figure shows the Gell-Mann-Oakes-Renner relation.\\
 All the calculation results are shown below.
